# yoda-translator

./: LICENSE  README.md  pyproject.toml
tests/: test_yoda.py  test_yoda_en.py
yoda/: __init__.py  yoda.py
